# Cing

./: .gitignore  CingExamples.sln  CingExamples_Prefix.pch  CingExamples_vs2008 (Deprecated).sln  CingExamples_vs2012.sln  CingProcessingExamples.sln  Cing_ProcessingExamples.sln  License.txt  README.md  Vision.sln  VisionExamples.sln  VisionExamples.workspace  VisionExamples_vs2005 (Deprecated).sln  temp.md
CingExamples.xcodeproj/: project.pbxproj
CingProcessingExamples.xcodeproj/: julio.mode1v3  julio.pbxuser  project.pbxproj
cing/: .gitignore
cing/src/: Cing-Precompiled.cpp  Cing-Precompiled.h  Cing.h
cing_bin/data/: resources.cfg
cing_ings/: Notes on Cing-Beats.txt
data/: resources.cfg
data/fonts/: default.fontdef
data/models/: cone.mesh  plane.mesh
doc/advanced/: Vision.chm  _abstract_game_state_8h-source.html  _app_main_8h-source.html  _application_8h-source.html  _blob_finder_8h-source.html  _camera_input_prereqs_8h-source.html  _computer_vision_prereqs_8h-source.html  _exception_8h-source.html  _framework_prereqs_8h-source.html  _g_u_i_manager_8h-source.html  _graphics_types_8h-source.html  _image_threshold_filter_8h-source.html  annotated.html  (+62 more)
src/: Vision.h
vision/externLibs/win/eclipseCDT/OgreBullet/Collisions/include/: Makefile.am
vision/externLibs/win/eclipseCDT/OgreBullet/Collisions/include/Debug/: OgreBulletCollisionsDebugDrawer.h  OgreBulletCollisionsDebugShape.h
vision/externLibs/win/eclipseCDT/OgreBullet/Collisions/include/Shapes/: OgreBulletCollisionsCylinderShape.h  OgreBulletCollisionsTerrainShape.h  OgreBulletCollisionsTrimeshShape.h
vision/externLibs/win/eclipseCDT/OgreBullet/Dynamics/include/Constraints/: Makefile.am  OgreBulletDynamics6DofConstraint.h  OgreBulletDynamicsHingeConstraint.h  OgreBulletDynamicsRaycastVehicle.h
vision/libraries/win/visualStudio2008/OgreBullet/Collisions/include/Shapes/: Makefile.am  OgreBulletCollisionsBoxShape.h  OgreBulletCollisionsConeShape.h  OgreBulletCollisionsConvexHullShape.h
vision/libraries/win/visualStudio2008/OgreBullet/Dynamics/include/: Makefile.am  OgreBulletDynamics.h
(+2396 files in other folders)
