ogrebulletcolincludedir = $(includedir)/OgreBullet/Collisions

SUBDIRS = Debug Shapes Utils

ogrebulletcolinclude_HEADERS = \
 OgreBulletCollisions.h \
 OgreBulletCollisionsObject.h \
 OgreBulletCollisionsObjectState.h \
 OgreBulletCollisionsPreRequisites.h \
 OgreBulletCollisionsRay.h \
 OgreBulletCollisionsShape.h \
 OgreBulletCollisionsWorld.h

