ogrebulletdynincludedir = $(includedir)/OgreBullet/Dynamics

SUBDIRS = Constraints Prefab

ogrebulletdyninclude_HEADERS = \
 OgreBulletDynamicsConstraint.h \
 OgreBulletDynamics.h \
 OgreBulletDynamicsObjectState.h \
 OgreBulletDynamicsPreRequisites.h \
 OgreBulletDynamicsRigidBody.h \
 OgreBulletDynamicsWorld.h

