ogrebulletcolshapesincludedir = $(includedir)/OgreBullet/Collisions/Shapes

ogrebulletcolshapesinclude_HEADERS = \
 OgreBulletCollisionsBoxShape.h \
 OgreBulletCollisionsCapsuleShape.h \
 OgreBulletCollisionsCompoundShape.h \
 OgreBulletCollisionsConeShape.h \
 OgreBulletCollisionsConvexHullShape.h \
 OgreBulletCollisionsCylinderShape.h \
 OgreBulletCollisionsGImpactShape.h \
 OgreBulletCollisionsMinkowskiSumShape.h \
 OgreBulletCollisionsMultiSphereShape.h \
 OgreBulletCollisionsSphereShape.h \
 OgreBulletCollisionsStaticPlaneShape.h \
 OgreBulletCollisionsTerrainShape.h \
 OgreBulletCollisionsTriangleShape.h \
 OgreBulletCollisionsTrimeshShape.h

